infra/k8s/overlays/prod/generated/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: kubelab
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: kubelab
    app.kubernetes.io/managed-by: toolkit
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: kubelab
    spec:
      containers:
        - name: api
          image: docker.io/mlorentedev/kubelab-api:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
            requests:
              memory: 256Mi
              cpu: "0.25"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: kubelab
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: kubelab
    app.kubernetes.io/managed-by: toolkit
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/part-of: kubelab
    spec:
      containers:
        - name: web
          image: docker.io/mlorentedev/kubelab-web:1.15.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
            requests:
              memory: 256Mi
              cpu: "0.25"
